--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <!-- ======Card Social ====== -->
             <div class="redes">
               <ul class="cardSocial-list">
-                <a href="" class="cardSocial-link text-decoration-none" target="_blank">
+                <a href="https://www.linkedin.com/in/sonia-beatriz-pacheco/" class="cardSocial-link text-decoration-none" target="_blank">
                   <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
                 </a>
-                <a href="" class="cardSocial-link text-decoration-none" target="_blank">
+                <a href="https://shiny-flan-a35088.netlify.app" class="cardSocial-link text-decoration-none" target="_blank">
                   <i class="fa-solid fa-globe" style="color: #ffffff;"></i>
                 </a>
-                <a href="" class="cardSocial-link text-decoration-none" target="_blank">
+                <a href="https://www.instagram.com/soni.a2011/" class="cardSocial-link text-decoration-none" target="_blank">
                   <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
                 </a>
                 <a href="mailto:soniapachecomza@gmail.com" class="cardSocial-link text-decoration-none" target="_blank">
